# fastapi-template

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
.ci/: Dockerfile
app/: config.py  main.py
app/src/application/common/filters/: base.py  build.py  utils.py
app/src/application/common/interfaces/: repository.py
app/src/application/user/: dto.py  filters.py
app/src/application/user/usecases/: create_user.py
app/src/domain/common/: exceptions.py
app/src/domain/user/: entity.py
app/src/infrastructure/db/postgresql/: database.py
app/src/infrastructure/db/postgresql/common/: utils.py
app/src/infrastructure/db/postgresql/migrations/: env.py
app/src/infrastructure/db/postgresql/models/: __init__.py  user.py
app/src/infrastructure/db/postgresql/user/: filters.py  mapper.py  model.py  repository.py
app/src/infrastructure/di/: common.py  database.py  dependencies.py  repository.py  stub.py  usecase.py
app/src/presentation/v1/: router.py
app/src/presentation/v1/views/: user.py
src/application/common/: enums.py  types.py
src/application/common/filters/: base.py
src/application/user/: dto.py  filters.py  repository.py
src/application/user/interactors/: create_one.py  get_many.py
src/application/user/usecases/: create.py  get.py  get_users.py
src/domain/user/: exceptions.py
src/infrastructure/db/postgresql/: commiter.py  database.py  models.py
src/infrastructure/db/postgresql/common/: utils.py
src/infrastructure/db/postgresql/common/filters/: base.py  build.py  utils.py
src/infrastructure/db/postgresql/migrations/: env.py
src/infrastructure/db/postgresql/user/: filters.py  model.py  repository.py
src/infrastructure/di/: dependencies.py
src/infrastructure/di/usecases/: user.py
src/presentation/: order_by.py  pagination.py
src/presentation/v1/: error_handlers.py  router.py
src/presentation/v1/views/: user.py
src/presentation/v1/views/user/: filters.py  requests.py  responses.py  router.py
tests/unit/: test_build_filters_list.py
(+4 files in other folders)
