[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = [
    {name = "vedaka1",email = "vladik.kuleshov.2003@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pre-commit = "^4.3.0"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
filter_files=true
skip_glob = ["migrations/*"]
skip_gitignore = true


[tool.ruff]
exclude = [
    ".venv",
    ".vscode",
    "venv",
    "alembic",
    "migrations",
]
line-length = 120
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.mypy]
pretty = true
files = 'src/'
exclude = "migrations"
disable_error_code = [
    "import-untyped",
    "return",
    "misc"
]
